# md-patch

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  Cargo.toml  README.md  install.sh  readme_zh.md  测试报告.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/en/: api-reference.md  design.md  quickstart.md
docs/zh/: api-reference.md  design.md  quickstart.md
releases/: 2026-02-20-v0.1.1-initial.md
src/: config.rs  main.rs  output.rs  parser.rs  patch.rs
tests/: integration_test.rs
