[package]
name = "md-patch"
version = "0.1.0"
edition = "2021"
description = "CLI tool for declarative, idempotent Markdown block patching"
authors = ["Song Difei <indenscale@gmail.com>"]
license = "MIT"
repository = "https://github.com/IndenScale/md-patch"
keywords = ["markdown", "cli", "patch", "agent", "automation"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "mdp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
pulldown-cmark = "0.12"
walkdir = "2.5"
colored = "2.2"

[dev-dependencies]
tempfile = "3.14"
